--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		<iframe src="silence.mp3" allow="autoplay" id="audio" style="display:none"></iframe>
 		<video playsinline autoplay loop id="vid">
         	<source src="https://dl.dropboxusercontent.com/s/to17ldzj00hce9e/video#t=61" type="video/mp4"></source>
+		<script>var video = document.currentScript.parentElement;video.currentTime = 61;</script>
       		</video>
 
 	</body>
